Fix chart range switch on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -33,9 +33,9 @@
 [name="range-switch"] button {
     color: #4e5862;
     border: 0;
-    border-radius: 20px;
-    width: 40px;
-    height: 40px;
+    border-radius: 24px;
+    width: 48px;
+    height: 48px;
     transition: .2s;
     background: transparent;
 }
